tdf#147488 BASIC: Create empty module when an empty library is selected

If the Standard library is empty (has no modules), when the Basic IDE is opened it shows only a black screen with nothing.

This patch makes it so that when the Standard library has no modules, a generic module is created and shown.

Change-Id: I26dbe41b4244492a21649ab08c5fc2df24ca12a9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145309
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins